--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
 		"next-themes": "^0.4.6",
 		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
+		"react-countup": "^6.5.3",
 		"react-dom": "19.2.3",
 		"react-hook-form": "^7.71.2",
 		"react-icons": "^5.5.0",
+		"recharts": "2.15.4",
+		"shadcn": "^3.8.5",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.5.0",
 		"zod": "^4.3.6"
@@ -33,10 +36,10 @@
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^19",
+		"@types/react-countup": "^4.3.1",
 		"@types/react-dom": "^19",
 		"babel-plugin-react-compiler": "1.0.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"shadcn": "^3.8.5",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5"
