--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
 		"@tanstack/react-query": "^5.90.21",
+		"@tanstack/react-table": "^8.21.3",
 		"axios": "^1.13.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
+		"iso4217": "^0.2.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.575.0",
 		"next": "16.1.6",
